--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ ul { list-style: none; padding-left: 0px; }
     
     <div id="list" class="col-lg-8 col-md-10 col-sm-12 my-3"> <!-- zachowania kontenerów dla różnych typów ekranów + margin-->
 
-        <h4>Śpiewnik Roboczy</h4>
+        <h4>Śpiewnik Noobeats</h4>
         <div class="row row-cols-2">
             <!--<div class="col-md-6">
                 <div>
@@ -115,18 +115,6 @@ ul { list-style: none; padding-left: 0px; }
 						</a>
 						<small>
 							<em>	by Chris Isaak	</em>
-						</small>
-						<!--<span>
-							<small><b></b></small>
-						</span>-->
-					</li>
-				
-					<li>
-						<a href="I-Wanna-Be-Yours.html" name="4">
-						4 - I Wanna Be Yours
-						</a>
-						<small>
-							<em>	by Arctic Monkeys	</em>
 						</small>
 						<!--<span>
 							<small><b></b></small>
